--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="epicivy.js"></script>
 </head>
-<body style="backgroud-color:black">
+<body style="backGround-color:black">
 
 <div class="container">
   <h1>eshfkshfkshfkshf</h1>
